<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".RegisterActivity">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/logoIv"
        android:contentDescription="@string/content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="20dp"
        android:layout_marginTop="210dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/baloo"/>

    <TextView
        android:id="@+id/subtitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTv"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/please_enter_your_details_below_to_register"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:fontFamily="@font/abeezee" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view"
        android:background="@color/white"
        android:layout_below="@id/subtitleTv"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailLl"
        android:layout_below="@id/view"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerEmailTil"
            app:hintEnabled="false"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usernameEt"
                android:autofillHints=""
                android:inputType="textPersonName"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawableTint="@color/grey"
                android:drawablePadding="10dp"
                android:hint="@string/johndoe"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLl"
        android:layout_below="@id/emailLl"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/passwordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/abeezee" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTil"
            app:hintEnabled="false"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerPasswordEt"
                android:autofillHints=""
                android:drawableStart="@drawable/baseline_security_24"
                android:drawableTint="@color/grey"
                android:drawablePadding="10dp"
                android:hint="@string/abcd1234"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPasswordLl"
        android:layout_below="@id/passwordLl"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/confirmPasswordTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/confirm_password"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:fontFamily="@font/abeezee" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordTil"
            app:hintEnabled="false"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirmPasswordEt"
                android:drawableStart="@drawable/baseline_security_24"
                android:drawableTint="@color/grey"
                android:drawablePadding="10dp"
                android:hint="@string/abcd1234"
                android:textColorHint="@color/grey"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:layout_below="@id/confirmPasswordLl"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_button"
        android:textColor="@color/yellow"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerRedirectLl"
        android:orientation="horizontal"
        android:layout_below="@id/registerButton"
        android:layout_marginTop="20dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/loginRedirectText"
            android:layout_marginStart="5dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_weight="1"/>

    </LinearLayout>


</RelativeLayout>