<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mainLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/baloo" />

            <ImageView
                android:id="@+id/logoIv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Minimum Monthly Spending Goal (₹)"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/minGoalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter minimum amount"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Maximum Monthly Spending Goal (₹)"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/maxGoalEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter maximum amount"
                android:inputType="numberDecimal" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/saveButton"

                android:layout_marginTop="20dp"

                android:text="@string/save"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_button"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>

